[package]
name = "amm_smart_contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm_smart_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
solana-program = "=1.17.0"
anchor-spl = "0.29.0"

[patch.crates-io]
getrandom = { git = "https://github.com/rust-random/getrandom", rev = "0.2.7" }
